//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table admins {
  id String [pk]
  email String [unique, not null]
  name String [not null]
  pswd String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table classes {
  id String [pk]
  kelas String [not null]
  program String [not null]
  jurusan String [not null]
  students students [not null]
  quizzes quizzes [not null]
  forums forums [not null]
  comments comments [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table lecturers {
  id String [pk]
  name String [not null]
  position String [not null]
  nip String [unique, not null]
  avatar_url String
  class_id String
  quizzes quizzes [not null]
  student_to_lecturer student_to_lecturer [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table student_to_lecturer {
  assigned_id String [not null]
  student_id String [not null]
  lecturers lecturers [not null]
  students students [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]

  indexes {
    (assigned_id, student_id) [pk]
  }
}

Table modules {
  id String [pk]
  prog_languages_id String [not null]
  title String [not null]
  order Int [not null]
  overview String [not null]
  prog_languages prog_languages [not null]
  submodules submodules [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table prog_languages {
  id String [pk]
  name String [not null]
  thumbnail_url String [not null]
  description String [not null]
  modules modules [not null]
  quizzes quizzes [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table quizzes {
  id String [pk]
  assignee_id String [not null]
  title String [not null]
  prog_languages_id String [not null]
  class_id String [not null]
  question String [not null]
  due_time DateTime [not null]
  prog_languages prog_languages [not null]
  classes classes [not null]
  lecturers lecturers [not null]
  student_to_quiz student_to_quiz [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table student_to_quiz {
  student_id String [not null]
  quiz_id String [not null]
  answer String
  code String
  score Int
  feedback String
  is_submitted Boolean [not null]
  quizzes quizzes [not null]
  students students [not null]
  time_submitted DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]

  indexes {
    (student_id, quiz_id) [pk]
  }
}

Table students {
  id String [pk]
  class_id String [not null]
  name String [not null]
  nrp String [unique, not null]
  avatar_url String
  classes classes [not null]
  student_to_quiz student_to_quiz [not null]
  user_progress user_progress [not null]
  forums forums [not null]
  comments comments [not null]
  student_to_lecturer student_to_lecturer [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table submodule_exercises {
  id String [pk]
  submodule_id String [not null]
  placeholder String [not null]
  expected_output String [not null]
  expected_code String [not null]
  submodules submodules [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table submodules {
  id String [pk]
  title String [not null]
  module_id String [not null]
  contents String [not null]
  order Int [not null]
  is_exercise Boolean [not null]
  modules modules [not null]
  submodule_exercises submodule_exercises
  user_progress user_progress [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table user_progress {
  student_id String [not null]
  submodule_id String [not null]
  is_done Boolean [not null]
  last_answer String [not null]
  students students [not null]
  submodules submodules [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]

  indexes {
    (student_id, submodule_id) [pk]
  }
}

Table forums {
  id String [pk]
  author_id String [not null]
  class_id String [not null]
  question String [not null]
  comments comments [not null]
  students students [not null]
  classes classes [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table comments {
  id String [pk]
  student_id String [not null]
  class_id String [not null]
  forum_id String [not null]
  answer String [not null]
  students students [not null]
  classes classes [not null]
  forums forums [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Ref: student_to_lecturer.assigned_id > lecturers.id

Ref: student_to_lecturer.student_id > students.id

Ref: modules.prog_languages_id > prog_languages.id

Ref: quizzes.prog_languages_id > prog_languages.id

Ref: quizzes.class_id > classes.id

Ref: quizzes.assignee_id > lecturers.id

Ref: student_to_quiz.quiz_id > quizzes.id

Ref: student_to_quiz.student_id > students.id

Ref: students.class_id > classes.id

Ref: submodule_exercises.submodule_id - submodules.id

Ref: submodules.module_id > modules.id

Ref: user_progress.student_id > students.id

Ref: user_progress.submodule_id > submodules.id

Ref: forums.author_id > students.id

Ref: forums.class_id > classes.id

Ref: comments.student_id > students.id

Ref: comments.class_id > classes.id

Ref: comments.forum_id > forums.id